# cloud-computing

./: .gitignore
dining_philosopher/: CMakeLists.txt  README.md
dining_philosopher/src/: chopstick.cpp  chopstick.h  main.cpp  philosopher.cpp  philosopher.h
